Equipments page: remove item/materia count that was no longer visible

--- a/static/inventory.css
+++ b/static/inventory.css
@@ -149,7 +149,7 @@
     position: absolute;
     right: 20px;
     top: 30px;
-    font-weight: bold;
+    font-size: 0.9em;
 }
 
 #searchBox {
